--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -821,7 +821,7 @@ section #title .credits.right {
 }
 
 .rebound {
-  		background-color:#FFEE88;
+  		background-color:#79AF07;
 			top:0px;
 			left:240px
 			padding:5px;
